--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,8 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.4",
+    "@amcharts/amcharts4-geodata": "^4.1.17",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
