--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
+    "vue-instagram": "^3.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.10",
     "vuex": "^3.4.0"
