--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,9 +12,9 @@
     "@amcharts/amcharts4": "^4.10.4",
     "@amcharts/amcharts4-geodata": "^4.1.17",
     "core-js": "^3.6.5",
+    "instafeed": "^1.4.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
-    "vue-instagram": "^3.0.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.10",
     "vuex": "^3.4.0"
