--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.4",
     "@amcharts/amcharts4-geodata": "^4.1.17",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "instafeed": "^1.4.0",
     "vue": "^2.6.11",
