--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "instafeed": "^1.4.0",
+    "jsonp": "^0.2.1",
+    "query-string": "^6.13.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.2.0",
